--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     Features Team Sign In All your files in one secure location, accessible
     anywhere. Fylo stores your most important files in one secure location.
     Access them wherever you need, share and collaborate with friends, family,
-    and co-workers. Get Started Stay productive, wherever you are Never let
+    and co. Get Started Stay productive, wherever you are Never let
     location be an issue when accessing your files. Fylo has you covered for all
     of your file storage needs. Securely share files and folders with friends,
     family and colleagues for live collaboration. No email attachments required!
