Created and styled the nav bar

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     </style>
   </head>
   <body>
+    <NAV>
+      
+    </NAV>
     Features Team Sign In All your files in one secure location, accessible
     anywhere. Fylo stores your most important files in one secure location.
     Access them wherever you need, share and collaborate with friends, family,
