--- a/index.html
+++ b/index.html
@@ -12,45 +12,119 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Pluralcode Academy | Fylo landing</title>
+    <!-- CSS  -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>Pluralcode Academy | Fylo landing</title>
   </head>
   <body>
-    <NAV>
-      
-    </NAV>
-    Features Team Sign In All your files in one secure location, accessible
-    anywhere. Fylo stores your most important files in one secure location.
-    Access them wherever you need, share and collaborate with friends, family,
-    and co. Get Started Stay productive, wherever you are Never let
-    location be an issue when accessing your files. Fylo has you covered for all
-    of your file storage needs. Securely share files and folders with friends,
-    family and colleagues for live collaboration. No email attachments required!
-    See how Fylo works Fylo has improved our team productivity by an order of
-    magnitude. Since making the switch our team has become a well-oiled
-    collaboration machine. Kyle Burton Founder & CEO, Huddle Get early access
-    today It only takes a minute to sign up and our free starter tier is
-    extremely generous. If you have any questions, our support team would be
-    happy to help you. Get Started For Free Phone: +1-543-123-4567
-    example@fylo.com About Us Jobs Press Blog Contact Us Terms Privacy
-
+    <nav>
+      <div class="logo">
+        <img src="./images/logo.svg" alt="Company Brand" />
+      </div>
+      <ul>
+        <li>Features</li>
+        <li>Team</li>
+        <li>Sign In</li>
+      </ul>
+    </nav>
+    <main>
+      <section class="hero">
+        <div class="hero_details">
+          <h1>All your files in one secure location, accessible anywhere</h1>
+          <p>
+            Fylo stores your most important files in one secure location. Access
+            them whenever you need, share and collorate with friends, family,
+            and co-workers
+          </p>
+          <form>
+            <input type="email" placeholder="Enter your email" required />
+            <button>Get Started</button>
+          </form>
+        </div>
+        <div class="hero_img">
+          <img src="./images/illustration-2.svg" alt="" />
+        </div>
+      </section>
+      <section class="social_prove">
+        <div class="social_prove_writeup">
+          <div class="social_prove_main">
+            <h2>Stay productive, whenever you are</h2>
+            <p>
+              Never let location be an issue when accessing your files. Fylo has
+              you covered for all of your files storage needs
+            </p>
+            <p>
+              Securely share files and folders with friends, family and
+              colleagues for collaboration. No emails attachments required!
+            </p>
+          </div>
+          <div class="social_prove_sub">
+            <img src="./images/icon-quotes.svg" alt="Quotation" />
+            <p>
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine
+            </p>
+            <div class="profile">
+              <img src="./images/avatar-testimonial.jpg" alt="pp" />
+              <div class="profile_details">
+                <span>Kyle Burton</span>
+                <span>Founder & CEO, Huddle </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="social_prove_img">
+          <img src="./images/illustration-1.svg" alt="" />
+        </div>
+      </section>
+      <section class="CTA">
+        <div class="CTA_writeup">
+          <h3>Get early access today</h3>
+          <p>
+            It only takes a minute to signup and our free starter tier is
+            extremely generous. If you have any questions, our support team
+            would be happy to help you
+          </p>
+        </div>
+        <div class="CTA_form">
+          <input type="email" placeholder="email@example.com" required />
+          <button>Get Started For Free</button>
+        </div>
+      </section>
+    </main>
     <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://pluralcode.institute/" target="_blank"
-          >PluralCode Academy</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
+      <section>
+        <img src="./images/logo.svg" alt="Company Brand" />
+        <div>
+          <i class="bx bxs-phone-call"></i>
+          <span>Phone +1-543-123-4567</span>
+        </div>
+        <div>
+          <i class="bx bxl-gmail"></i>
+          <span>example@fylo.com</span>
+        </div>
+      </section>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Privacy</a></li>
+      </ul>
+      <section>
+        <i class="bx bxl-facebook"></i>
+        <i class="bx bxl-twitter"></i>
+        <i class="bx bxl-instagram"></i>
+      </section>
     </footer>
   </body>
 </html>
