--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
       href="./images/favicon-32x32.png"
     />
 
-    <!-- CSS  -->
+    <!-- BOXICONS  -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css" />
     <title>Pluralcode Academy | Fylo landing</title>
   </head>
   <body>
