--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Pluralcode Academy | Fylo landing</title>
   </head>
   <body>
