Social Prove Section Set For Desktop

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Pluralcode Academy | Fylo landing</title>
   </head>
   <body>
-    <nav>
+    <nav class="container_pad">
       <div class="logo">
         <img src="./images/logo.svg" alt="Company Brand" />
       </div>
@@ -35,7 +35,7 @@
       </ul>
     </nav>
     <main>
-      <section class="hero">
+      <section class="hero container_pad_2">
         <div class="hero_details">
           <h1>All your files in one secure location, accessible anywhere</h1>
           <p>
@@ -49,40 +49,47 @@
           </form>
         </div>
         <div class="hero_img">
-          <img src="./images/illustration-2.svg" alt="" />
+          <img src="./images/illustration-1.svg" alt="" />
         </div>
       </section>
       <section class="social_prove">
-        <div class="social_prove_writeup">
-          <div class="social_prove_main">
-            <h2>Stay productive, whenever you are</h2>
-            <p>
-              Never let location be an issue when accessing your files. Fylo has
-              you covered for all of your files storage needs
-            </p>
-            <p>
-              Securely share files and folders with friends, family and
-              colleagues for collaboration. No emails attachments required!
-            </p>
-          </div>
-          <div class="social_prove_sub">
-            <img src="./images/icon-quotes.svg" alt="Quotation" />
-            <p>
-              Fylo has improved our team productivity by an order of magnitude.
-              Since making the switch our team has become a well-oiled
-              collaboration machine
-            </p>
-            <div class="profile">
-              <img src="./images/avatar-testimonial.jpg" alt="pp" />
-              <div class="profile_details">
-                <span>Kyle Burton</span>
-                <span>Founder & CEO, Huddle </span>
+        <div class="social_prove_container container_pad_2">
+          <div class="social_prove_writeup">
+            <div class="social_prove_details">
+              <h2>Stay productive, whenever you are</h2>
+              <p>
+                Never let location be an issue when accessing your files. Fylo
+                has you covered for all of your files storage needs
+              </p>
+              <p>
+                Securely share files and folders with friends, family and
+                colleagues for collaboration. No emails attachments required!
+              </p>
+
+              <span>
+                <a href="#">See How Fylo Works</a>
+                <i class="bx bx-right-arrow-circle"></i>
+              </span>
+            </div>
+            <div class="social_prove_sub">
+              <img src="./images/icon-quotes.svg" alt="Quotation" />
+              <p>
+                Fylo has improved our team productivity by an order of
+                magnitude. Since making the switch our team has become a
+                well-oiled collaboration machine
+              </p>
+              <div class="profile">
+                <img src="./images/avatar-testimonial.jpg" alt="pp" />
+                <div class="profile_details">
+                  <span>Kyle Burton</span>
+                  <span>Founder & CEO, Huddle </span>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="social_prove_img">
-          <img src="./images/illustration-1.svg" alt="" />
+          <div class="social_prove_img">
+            <img src="./images/illustration-2.svg" alt="" />
+          </div>
         </div>
       </section>
       <section class="CTA">
