Done with the footer section

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
           </div>
         </div>
       </section>
-      <section class="CTA">
-        <div class="CTA_writeup">
+      <section class="container_pad_2 CTA">
+        <div class="CTA_details">
           <h3>Get early access today</h3>
           <p>
             It only takes a minute to signup and our free starter tier is
@@ -101,13 +101,14 @@
             would be happy to help you
           </p>
         </div>
+
         <div class="CTA_form">
           <input type="email" placeholder="email@example.com" required />
           <button>Get Started For Free</button>
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="container_pad_2 footer">
       <section>
         <img src="./images/logo.svg" alt="Company Brand" />
         <div>
