Setting the active states

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           </p>
           <form>
             <input type="email" placeholder="Enter your email" required />
+            <span>Please Check Your Email</span>
             <button>Get Started</button>
           </form>
         </div>
